On page load implementation

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 		<title>Poch'Lib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="style.css">
   	</head>
   	<body>
 		<div id="myBooks">
 			<h1 class="title">Poch'Lib</h1>
 			<h2 class="h2">Nouveau Livre</h2>
+			<button id='addbt' type="button">Ajouter un livre</button>
 			<hr>
 			<div id="content">
 				<h2>Ma poch'liste</h2>
