Implementation : When the user click on the bookmark icon V1.0

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 			<div id="content">
 				<h2>Ma poch'liste</h2>
+				<div id="MaPochList"></div>
 			</div>
 		</div>
 		<script src="./index.js"></script>
