--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 				<div id="MaPochList"></div>
 			</div>
 		</div>
+		<script src="./livre.js"></script>
 		<script src="./index.js"></script>
-
+		
   	</body>
 </html>
