--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 				<h2>Ma poch'liste</h2>
 			</div>
 		</div>
+		<script src="./livre.js"></script>
 		<script src="./index.js"></script>
 
   	</body>
