Implementation : When the user click on the bookmark icon V1.10

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</form><br><br>
 				<div id="resultSearch">
 					<h2>Résultats de recherche</h2>
-					<div id="tabResult">
+					<div class="grid" id="tabResult">
 
 					</div>
 				</div>
