Implementation : When the user click on the bookmark icon V1.11

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
 					<button id='bt_search' type="submit" value="Rechercher">Rechercher</button><br><br>
 					<button id='bt_cancel' type="button">Annuler</button>
 				</form><br><br>
+
 				<div id="resultSearch">
 					<h2>Résultats de recherche</h2>
-					<div class="grid" id="tabResult">
+					<div class="grid" id="container">
+
+					</div>
+					<div id="tabResult">
 
 					</div>
 				</div>
