Implementation : When the user click on the bookmark icon V1.14

--- a/index.html
+++ b/index.html
@@ -25,17 +25,15 @@
 				<div id="resultSearch">
 					<h2>Résultats de recherche</h2>
 					<div class="grid" id="container">
-
 					</div>
-					<div id="tabResult">
-
-					</div>
+					<div id="tabResult"></div>
 				</div>
 			</div>
 			<hr>
 
 			<div id="content">
 				<h2>Ma poch'liste</h2>
+				<div class="grid" id="pochlistecontent"></div>
 			</div>
 		</div>
 		<script src="./livre.js"></script>
