Implementation : When the user click on the bookmark icon V1.27

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   	<body>
 		<div id="myBooks">
 			<h1 class="title">Poch'Lib</h1>
-			<h2 class="h2">Nouveau Livre</h2>
-			<button id='bt_add' type="button">Ajouter un livre</button><br><br>
+			<h2 class="h2">Nouveau book</h2>
+			<button id='bt_add' type="button">Ajouter un book</button><br><br>
 			<div id="divformsearch">
 				<form id="formsearch" action="">
-					<label for="titre_livre">Titre du livre</label><br><br>
-					<input type="text" id="titre_livre" name="titre_livre"><br><br>
-					<label for="auteur">Auteur</label><br><br>
-					<input type="text" id="auteur" name="auteur"><br><br>
+					<label for="title_book">Titre du book</label><br><br>
+					<input type="text" id="title_book" name="title_book"><br><br>
+					<label for="author">author</label><br><br>
+					<input type="text" id="author" name="author"><br><br>
 					<button id='bt_search' type="submit" value="Rechercher">Rechercher</button><br><br>
 					<button id='bt_cancel' type="button">Annuler</button>
 				</form><br><br>
@@ -35,7 +35,7 @@
 				<div class="grid" id="pochlistecontent"></div>
 			</div>
 		</div>
-		<script src="./livre.js"></script>
+		<script src="./book.js"></script>
 		<script src="./index.js"></script>
 
   	</body>
