Implementation : When the user click on the bookmark icon V1.28

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   	<body>
 		<div id="myBooks">
 			<h1 class="title">Poch'Lib</h1>
-			<h2 class="h2">Nouveau book</h2>
+			<h2 class="h2">Nouveau livre</h2>
 			<button id='bt_add' type="button">Ajouter un book</button><br><br>
 			<div id="divformsearch">
 				<form id="formsearch" action="">
-					<label for="title_book">Titre du book</label><br><br>
+					<label for="title_book">Titre du livre</label><br><br>
 					<input type="text" id="title_book" name="title_book"><br><br>
 					<label for="author">author</label><br><br>
 					<input type="text" id="author" name="author"><br><br>
@@ -36,6 +36,7 @@
 			</div>
 		</div>
 		<script src="./book.js"></script>
+		<script src="./domManipulator.js"></script>
 		<script src="./index.js"></script>
 
   	</body>
