Implementation : When the user click on the bookmark icon V1.32

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 			</div>
 		</div>
 		<script src="./book.js"></script>
-		<script src="./domManipulator.js"></script>
+		<script src="./BookmarkManager.js"></script>
+		<script src="./DomManipulator.js"></script>
 		<script src="./index.js"></script>
 
   	</body>
