Implementation : When the user click on the bookmark icon V1.33

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				<div class="grid" id="pochlistecontent"></div>
 			</div>
 		</div>
+		<script src="./ClickManager.js"></script>
 		<script src="./book.js"></script>
 		<script src="./BookmarkManager.js"></script>
 		<script src="./DomManipulator.js"></script>
